# MMReflection

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  constructor.cpp  constructor.h  data_buffer.cpp  data_buffer.h  database.cpp  database.h  enum.cpp  enum.h  marco.h  meta.cpp  meta.h  method.cpp  method.h  property.cpp  property.h  reflection.h  registration.cpp  registration.h  serializer.cpp  serializer.h  type.cpp  type.h  type_utils.h  variable.cpp  variable.h
test/: CMakeLists.txt  reflection_constructor.cpp  reflection_enum.cpp  reflection_meta.cpp  reflection_method.cpp  reflection_property.cpp  reflection_readme.cpp  reflection_serializer.cpp  reflection_type.cpp  reflection_variable.cpp
